canary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: canary
 labels:
   app: canary
spec:
 replicas: 1
 selector:
   matchLabels:
     app: canary
 template:
   metadata:
     labels:
       app: canary
   spec:
     containers:
     - name: canary
       image: argoproj/rollouts-demo:blue
       ports:
       - name: http
         containerPort: 8080
         protocol: TCP
       resources:
         requests:
           memory: 32Mi
           cpu: 5m
