primary-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
 name: primary
 labels:
   app: primary
spec:
 replicas: 1
 selector:
   matchLabels:
     app: primary
 template:
   metadata:
     labels:
       app: primary
   spec:
     containers:
     - name: primary
       image: argoproj/rollouts-demo:green
       ports:
       - name: http
         containerPort: 8080
         protocol: TCP
       resources:
         requests:
           memory: 32Mi
           cpu: 5m
