primary-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: primary
 labels:
   app: primary
spec:
 ports:
 - port: 80
   targetPort: http
   protocol: TCP
   name: http
 selector:
   app: primary
