redis-service.yaml
apiVersion: v1
kind: Service
metadata:
 name: redis
 labels:
   app: redis
spec:
 ports:
 - port: 6379
   targetPort: http
   protocol: TCP
   name: redis
 selector:
   app: redis
