canary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: canary
 annotations:
   nginx.ingress.kubernetes.io/canary: \"true\"
   nginx.ingress.kubernetes.io/canary-weight: \"20\"
spec:
 ingressClassName: nginx
 rules:
 - host: rollouts-demo.local
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: canary
           port:
             number: 80
