primary-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: primary
spec:
 ingressClassName: nginx
 rules:
 - host: rollouts-demo.local
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: primary
           port:
             number: 80
