redis-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: redis
spec:
 ingressClassName: nginx
 rules:
 - host: redis-demo.local
   http:
     paths:
     - path: /
       pathType: Prefix
       backend:
         service:
           name: redis
           port:
             number: 6379
